# PollyMC

./: .gitignore  BUILD.md  CMakeLists.txt  COPYING.md  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc.yml  suggestion.yml
.github/workflows/: build.yml  trigger_builds.yml  trigger_release.yml  update-flake.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
flatpak/: org.fn2006.PollyMC.yml  pollymc
imgsrc/: licenses
launcher/: Application.cpp  BaseInstance.cpp  CMakeLists.txt  CreateAuthlibInjectorAccount.cpp  CreateAuthlibInjectorAccount.h  LaunchController.cpp  LaunchController.h
launcher/java/: JavaUtils.cpp
launcher/minecraft/: MinecraftInstance.cpp  MinecraftInstance.h  PackProfile.cpp
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  AuthSession.cpp  AuthSession.h  MinecraftAccount.cpp  MinecraftAccount.h  Yggdrasil.cpp  Yggdrasil.h
launcher/minecraft/auth/flows/: AuthlibInjector.cpp  AuthlibInjector.h  Elyby.cpp  Elyby.h
launcher/minecraft/auth/steps/: AuthlibInjectorMetadataStep.cpp  AuthlibInjectorMetadataStep.h  ElybyProfileStep.cpp  ElybyProfileStep.h  ElybyStep.cpp  ElybyStep.h  MinecraftProfileStepMojang.cpp  (+1 more)
launcher/minecraft/launch/: ClaimAccount.cpp  InjectAuthlib.cpp  InjectAuthlib.h  LauncherPartLaunch.cpp
launcher/minecraft/mod/: ResourcePack.cpp
launcher/minecraft/services/: CapeChange.cpp  CapeChange.h  SkinDelete.cpp  SkinDelete.h  SkinUpload.cpp  SkinUpload.h
launcher/modplatform/modpacksch/: FTBPackInstallTask.cpp  FTBPackInstallTask.h
launcher/modplatform/modrinth/: ModrinthPackManifest.h.orig
launcher/modplatform/technic/: TechnicPackProcessor.cpp.orig
launcher/net/: Download.cpp  Upload.cpp
launcher/resources/backgrounds/: backgrounds.qrc  licenses
launcher/settings/: MissingAuthlibInjectorBehavior.h
launcher/ui/: GuiUtil.cpp  GuiUtil.h  InstanceWindow.cpp  InstanceWindow.h  MainWindow.cpp
launcher/ui/dialogs/: AboutDialog.cpp  AuthlibInjectorLoginDialog.cpp  AuthlibInjectorLoginDialog.h  AuthlibInjectorLoginDialog.ui  ElybyLoginDialog.cpp  ElybyLoginDialog.h  ElybyLoginDialog.ui  LoginDialog.h  NewInstanceDialog.cpp  SkinUploadDialog.cpp  SkinUploadDialog.h
launcher/ui/themes/: ThemeManager.cpp
launcher/ui/widgets/: ThemeCustomizationWidget.h
launcher/updater/: PrismExternalUpdater.cpp
launcher/updater/prismupdater/: PrismUpdater.cpp
libraries/: README.md
libraries/launcher/: CMakeLists.txt
nix/: NIX.md  default.nix  dev.nix  distribution.nix  package.nix
nix/pkg/: default.nix  wrapper.nix
program_info/: CMakeLists.txt  README.md  genicons.sh  org.fn2006.PollyMC.desktop.in  org.fn2006.PollyMC.metainfo.xml.in  org.polymc.PolyMC.metainfo.xml.in  pollymc.6.scd  pollymc.icns  pollymc.manifest.in  pollymc.qrc  pollymc.rc.in
scripts/: getToken.py
(+27 files in other folders)
